force-app/main/default/objects/zaapit__ZaapIT_Table_user_configuration__c/zaapit__ZaapIT_Table_user_configuration__c.object-meta.xml
<CustomObject>
    <description>ZaapIT Table user configuration</description>
    <label>ZaapIT Table user configuration</label>
    <nameField>
        <label>ZaapIT Table user Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZaapIT Table user configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>