force-app/main/default/objects/zaapit__ZaapIT_Table_user_configuration__c/fields/zaapit__Favorite_View__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Favorite_View__c</fullName>
    <label>Favorite View</label>
    <length>50</length>
    <type>Text</type>
</CustomField>