force-app/main/default/objects/zaapit__ZaapIT_Table_user_configuration__c/fields/zaapit__text1__c.field-meta.xml
<CustomField>
    <fullName>zaapit__text1__c</fullName>
    <label>text1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>